--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -514,24 +514,17 @@ ExternalProject_Add(mysql-connector-c
 )
 
 ExternalProject_Add(python
-	DEPENDS bzip2 openssl sqlite zlib
 	DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
-	URL https://www.python.org/ftp/python/2.7.13/Python-2.7.13.tgz
-	URL_HASH SHA256=a4f05a0720ce0fd92626f0278b6b433eee9a6173ddf2bced7957dfb599a5ece1
+	URL https://codeload.github.com/xbmc/python/tar.gz/2.7.13
+	URL_HASH SHA256=3b4cdf48e86a7b20e2b459d1a65b30834cb20542d1af9396765321f99b19a564
 	PATCH_COMMAND
-		COMMAND ${PATCH} -p1 -i ${CMAKE_SOURCE_DIR}/patches/python-cmake-buildsystem-b348a50.diff
 		COMMAND ${PATCH} -p1 -i ${CMAKE_SOURCE_DIR}/patches/$(TargetName).diff
 	CMAKE_ARGS
 		${ADDITIONAL_ARGS}
 		-DCMAKE_INSTALL_PREFIX:PATH=${INSTALL_PREFIX}
-		-DCMAKE_PREFIX_PATH:PATH=${PREFIX}/${KODI_PATH}%3B%3B${PREFIX}/bzip2/${KODI_PATH}%3B%3B${PREFIX}/openssl/${KODI_PATH}%3B%3B${PREFIX}/sqlite/${KODI_PATH}%3B%3B${PREFIX}/zlib/${KODI_PATH}
+		-DCMAKE_PREFIX_PATH:PATH=${PREFIX}/${KODI_PATH}
 		-DCMAKE_CONFIGURATION_TYPES:STRING=RelWithDebInfo
-		-DBUILD_LIBPYTHON_SHARED:BOOL=ON
-		-DBUILD_TESTING:BOOL=OFF
-		-DBUILD_WININST:BOOL=OFF
-		-DDOWNLOAD_SOURCES:BOOL=OFF
-		-DINSTALL_MANUAL:BOOL=OFF
-		-DINSTALL_TEST:BOOL=OFF
+		-DBUILD_SHARED_LIBS:BOOL=ON
 )
 
 ExternalProject_Add(shairplay
