--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -534,6 +534,28 @@ ExternalProject_Add(python
 		-DINSTALL_TEST:BOOL=OFF
 )
 
+ExternalProject_Add(python3
+	DEPENDS bzip2 openssl sqlite zlib
+	DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
+	URL https://www.python.org/ftp/python/3.6.1/Python-3.6.1.tgz
+	URL_HASH MD5=2d0fc9f3a5940707590e07f03ecb08b9
+	PATCH_COMMAND
+		COMMAND ${PATCH} -p1 -i ${CMAKE_SOURCE_DIR}/patches/python-cmake-buildsystem-b74019a.diff
+		COMMAND ${PATCH} -p1 -i ${CMAKE_SOURCE_DIR}/patches/$(TargetName).diff
+	CMAKE_ARGS
+		${ADDITIONAL_ARGS}
+		-DCMAKE_INSTALL_PREFIX:PATH=${INSTALL_PREFIX}
+		-DCMAKE_PREFIX_PATH:PATH=${PREFIX}/${KODI_PATH}%3B%3B${PREFIX}/bzip2/${KODI_PATH}%3B%3B${PREFIX}/openssl/${KODI_PATH}%3B%3B${PREFIX}/sqlite/${KODI_PATH}%3B%3B${PREFIX}/zlib/${KODI_PATH}
+		-DCMAKE_CONFIGURATION_TYPES:STRING=RelWithDebInfo
+		-DBUILD_LIBPYTHON_SHARED:BOOL=ON
+		-DBUILD_TESTING:BOOL=OFF
+		-DBUILD_WININST:BOOL=OFF
+		-DENABLE_DECIMAL:BOOL=OFF
+		-DDOWNLOAD_SOURCES:BOOL=OFF
+		-DINSTALL_MANUAL:BOOL=OFF
+		-DINSTALL_TEST:BOOL=OFF
+)
+
 ExternalProject_Add(shairplay
 	DOWNLOAD_NAME shairplay-ce80e00.tar.gz
 	DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
